# algorithms

./: .travis.yml  CMakeLists.txt  README.md
array/: CMakeLists.txt  Makefile  heap.c  heap.h  kadane.c  kadane.h  test_heap.c  test_kadane.c
string/: CMakeLists.txt  Makefile  kmp.c  kmp.h  kmp_test.c  manacher.c  manacher.h  test_kmp.c  test_manacher.c
unittests/: CMakeLists.txt  kadane_unittests.cpp  kmp_unittests.cpp  manacher_unittests.cpp
